cmake_minimum_required(VERSION 3.16)

project(leetcode)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(189_Rotate_Array "189. Rotate Array.cpp")
add_executable(1368_Minimum_Cost_to_Make_at_Least_One_Valid_Path_in_a_Grid "1368. Minimum Cost to Make at Least One Valid Path in a Grid.cpp")
add_executable(42_Trapping_Rain_Water "42. Trapping Rain Water.cpp")
add_executable(407_Trapping_Rain_Water_II "407. Trapping Rain Water II.cpp")
add_executable(2661_First_Completely_Painted_Row_or_Column "2661. First Completely Painted Row or Column.cpp")
add_executable(2017_Grid_Game "2017. Grid Game.cpp")
