cmake_minimum_required(VERSION 3.16)

project(leetcode)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(189_Rotate_Array "189. Rotate Array.cpp")
add_executable(1368_Minimum_Cost_to_Make_at_Least_One_Valid_Path_in_a_Grid "1368. Minimum Cost to Make at Least One Valid Path in a Grid.cpp")
add_executable(42_Trapping_Rain_Water "42. Trapping Rain Water.cpp")
add_executable(407_Trapping_Rain_Water_II "407. Trapping Rain Water II.cpp")
add_executable(2661_First_Completely_Painted_Row_or_Column "2661. First Completely Painted Row or Column.cpp")
add_executable(2017_Grid_Game "2017. Grid Game.cpp")
add_executable(1765_Map_of_Highest_Peak "1765. Map of Highest Peak.cpp")
add_executable(1267_Count_Servers_that_Communicate "1267. Count Servers that Communicate.cpp")
add_executable(802_Find_Eventual_Safe_States "802. Find Eventual Safe States.cpp")
add_executable(2948_Make_Lexicographically_Smallest_Array_by_Swapping_Elements "2948. Make Lexicographically Smallest Array by Swapping Elements.cpp")
add_executable(2127_Maximum_Employees_to_Be_Invited_to_a_Meeting "2127. Maximum Employees to Be Invited to a Meeting.cpp")
add_executable(1462_Course_Schedule_IV "1462. Course Schedule IV.cpp")
add_executable(2658_Maximum_Number_of_Fish_in_a_Grid "2658. Maximum Number of Fish in a Grid.cpp")
add_executable(684_Redundant_Connection "684. Redundant Connection.cpp")
add_executable(785_Is_Graph_Bipartite "785. Is Graph Bipartite?.cpp")
add_executable(2493_Divide_Nodes_Into_the_Maximum_Number_of_Groups "2493. Divide Nodes Into the Maximum Number of Groups.cpp")
add_executable(827_Making_A_Large_Island "827. Making A Large Island.cpp")
add_executable(1752_Check_if_Array_Is_Sorted_and_Rotated "1752. Check if Array Is Sorted and Rotated.cpp")
add_executable(3105_Longest_Strictly_Increasing_or_Strictly_Decreasing_Subarray "3105. Longest Strictly Increasing or Strictly Decreasing Subarray.cpp")
add_executable(1800_Maximum_Ascending_Subarray_Sum "1800. Maximum Ascending Subarray Sum.cpp")

target_link_libraries(1368_Minimum_Cost_to_Make_at_Least_One_Valid_Path_in_a_Grid gtest gtest_main)
